native_integration.py

"""
native_integration.py — Native C/C++/Go/Shell for MINXG v2.0.0

Loads and wraps:
  - libminxg_c.so    (C: text processing, memory pools, statistics)
  - libminxg_core.so (C++: crypto, compression, JSON, RAII wrappers)
  - libminxg_go.so   (Go: health, WebSocket hub, rate limiting via c-shared)
  - shell scripts    (OS-native: grep/sed/awk/date/printf wrappers)

每个都是原生实现，不需要Python扩展。
"""

from __future__ import annotations
import ctypes, ctypes.util, os, sys, hashlib, struct, time, json, subprocess
from pathlib import Path
from typing import Optional, List, Tuple, Any

# ═══════════════════════════════════════════════════════════════════════════════
# PATH RESOLUTION
# ═══════════════════════════════════════════════════════════════════════════════

_PROJ = Path("/storage/emulated/0/MINXG-Beta-0.11.0")
_libs: dict = {}

def _find_lib(name: str) -> Optional[Path]:
    for p in [_PROJ, _PROJ / "cpp_core", _PROJ / "build"]:
        candidate = p / name
        if candidate.exists():
            # Android linker namespace restriction: copy to usr/lib
            dest = Path("/data/data/com.termux/files/usr/lib") / name
            if not dest.exists() or candidate.stat().st_mtime > dest.stat().st_mtime:
                import shutil
                shutil.copy2(candidate, dest)
            return dest
    return None

# ═══════════════════════════════════════════════════════════════════════════════
# C CORE — libminxg_c.so  (text_engine + mem_pool + evolve + arch)
# ═══════════════════════════════════════════════════════════════════════════════

class CCore:
    """Pure C: Boyer-Moore-Horspool, CSV, glob, Unicode, memory pools, stats."""
    _lib = None

    @classmethod
    def load(cls):
        path = _find_lib("libminxg_c.so")
        if not path:
            cls._lib = None
            return
        if cls._lib is not None:  # Already loaded
            return
        try:
            # RTLD_GLOBAL so symbols are exported for dependent libraries (C++/Go)
            cls._lib = ctypes.CDLL(str(path), ctypes.RTLD_GLOBAL)
            cls._setup_funcs()
        except Exception as e:
            print(f"[native] C lib load failed: {e}", file=sys.stderr)
            cls._lib = None

    @classmethod
    def _setup_funcs(cls):
        lib = cls._lib
        # memmem family
        lib.minxg_memmem.argtypes = [ctypes.c_void_p, ctypes.c_size_t,
                                      ctypes.c_void_p, ctypes.c_size_t]
        lib.minxg_memmem.restype = ctypes.c_int64
        lib.minxg_memrmem.argtypes = lib.minxg_memmem.argtypes
        lib.minxg_memrmem.restype = ctypes.c_int64
        lib.minxg_memcnt.argtypes = lib.minxg_memmem.argtypes
        lib.minxg_memcnt.restype = ctypes.c_int

        # string transforms (in-place)
        lib.minxg_str_lower.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
        lib.minxg_str_lower.restype = ctypes.c_size_t
        lib.minxg_str_upper.argtypes = lib.minxg_str_lower.argtypes
        lib.minxg_str_upper.restype = ctypes.c_size_t
        lib.minxg_str_trim.argtypes = lib.minxg_str_lower.argtypes
        lib.minxg_str_trim.restype = ctypes.c_size_t

        # glob
        lib.minxg_fnmatch.argtypes = [ctypes.c_char_p, ctypes.c_char_p]
        lib.minxg_fnmatch.restype = ctypes.c_bool
        lib.minxg_fnmatch_caseless.argtypes = lib.minxg_fnmatch.argtypes
        lib.minxg_fnmatch_caseless.restype = ctypes.c_bool

        # Unicode
        lib.minxg_utf8_codepoint_count.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
        lib.minxg_utf8_codepoint_count.restype = ctypes.c_int
        lib.minxg_utf8_is_valid.argtypes = lib.minxg_utf8_codepoint_count.argtypes
        lib.minxg_utf8_is_valid.restype = ctypes.c_bool

        # extractors (zero-copy, caller allocates out_buf)
        lib.minxg_slugify.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                      ctypes.c_char_p, ctypes.c_size_t]
        lib.minxg_slugify.restype = ctypes.c_size_t
        lib.minxg_truncate.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                       ctypes.c_size_t, ctypes.c_char_p,
                                       ctypes.c_size_t, ctypes.c_char_p,
                                       ctypes.c_size_t]
        lib.minxg_truncate.restype = ctypes.c_size_t
        lib.minxg_word_freq_hash.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                              ctypes.c_int, ctypes.c_char_p,
                                              ctypes.c_size_t]
        lib.minxg_word_freq_hash.restype = ctypes.c_size_t
        lib.minxg_normalize_ws.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                           ctypes.c_int, ctypes.c_char_p,
                                           ctypes.c_size_t]
        lib.minxg_normalize_ws.restype = ctypes.c_size_t
        lib.minxg_extract_urls.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                           ctypes.c_char_p, ctypes.c_size_t, ctypes.c_int]
        lib.minxg_extract_urls.restype = ctypes.c_int
        lib.minxg_extract_emails.argtypes = lib.minxg_extract_urls.argtypes
        lib.minxg_extract_emails.restype = ctypes.c_int
        lib.minxg_extract_hashtags.argtypes = lib.minxg_extract_urls.argtypes
        lib.minxg_extract_hashtags.restype = ctypes.c_int

        # base convert
        lib.minxg_base_convert.argtypes = [ctypes.c_char_p, ctypes.c_int,
                                           ctypes.c_int, ctypes.c_char_p, ctypes.c_size_t]
        lib.minxg_base_convert.restype = ctypes.c_int

        # text extractors (C-native, no Go dependency)
        lib.minxg_extract_urls.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                           ctypes.c_char_p, ctypes.c_size_t, ctypes.c_int]
        lib.minxg_extract_urls.restype = ctypes.c_int
        lib.minxg_extract_emails.argtypes = lib.minxg_extract_urls.argtypes
        lib.minxg_extract_emails.restype = ctypes.c_int
        lib.minxg_extract_hashtags.argtypes = lib.minxg_extract_urls.argtypes
        lib.minxg_extract_hashtags.restype = ctypes.c_int

        # word frequency hash (C-native)
        lib.minxg_word_freq_hash.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                              ctypes.c_int, ctypes.c_char_p, ctypes.c_size_t]
        lib.minxg_word_freq_hash.restype = ctypes.c_size_t

        # stats
        lib.minxg_statistics.argtypes = [ctypes.POINTER(ctypes.c_double),
                                          ctypes.c_size_t,
                                          ctypes.POINTER(ctypes.c_double),
                                          ctypes.POINTER(ctypes.c_double),
                                          ctypes.POINTER(ctypes.c_double),
                                          ctypes.POINTER(ctypes.c_double),
                                          ctypes.POINTER(ctypes.c_double),
                                          ctypes.POINTER(ctypes.c_double)]
        lib.minxg_statistics.restype = ctypes.c_int

    @classmethod
    def available(cls) -> bool: return cls._lib is not None

    def bmh_search(self, haystack: str, needle: str) -> int:
        """Boyer-Moore-Horspool substring search via C. Returns offset or -1."""
        self.__class__.load()
        hb = haystack.encode('utf-8'); nb = needle.encode('utf-8')
        pos = self._lib.minxg_memmem(hb, len(hb), nb, len(nb))
        return int(pos)

    def bmh_rsearch(self, haystack: str, needle: str) -> int:
        """Reverse BMH search (last occurrence) via C."""
        self.__class__.load()
        hb = haystack.encode('utf-8'); nb = needle.encode('utf-8')
        return int(self._lib.minxg_memrmem(hb, len(hb), nb, len(nb)))

    def bmh_count(self, haystack: str, needle: str) -> int:
        """Count non-overlapping occurrences via C."""
        self.__class__.load()
        hb = haystack.encode('utf-8'); nb = needle.encode('utf-8')
        return int(self._lib.minxg_memcnt(hb, len(hb), nb, len(nb)))

    def str_lower(self, s: str) -> str:
        self.__class__.load()
        """In-place lowercase (C implementation)."""
        if not self._lib: return s.lower()
        b = s.encode(); buf = ctypes.create_string_buffer(len(b))
        buf.value = b
        self._lib.minxg_str_lower(buf, len(b))
        return buf.value.decode()

    def str_upper(self, s: str) -> str:
        self.__class__.load()
        """In-place uppercase."""
        if not self._lib: return s.upper()
        b = s.encode(); buf = ctypes.create_string_buffer(len(b))
        buf.value = b
        self._lib.minxg_str_upper(buf, len(b))
        return buf.value.decode()

    def glob_match(self, pattern: str, name: str, case_insensitive: bool = False) -> bool:
        """Glob-style pattern matching (fnmatch-lite, zero-alloc)."""
        if not self._lib: return self._py_glob(pattern, name, case_insensitive)
        pat_b = pattern.encode(); name_b = name.encode()
        fn = self._lib.minxg_fnmatch_caseless if case_insensitive else self._lib.minxg_fnmatch
        return bool(fn(pat_b, name_b))

    def _py_glob(self, pat: str, name: str, ci: bool) -> bool:
        import fnmatch
        return fnmatch.fnmatch(name, pat) if not ci else fnmatch.fnmatch(name.lower(), pat.lower())

    def utf8_valid(self, s: str) -> bool:
        """Validate UTF-8."""
        if not self._lib: return True
        b = s.encode('utf-8', errors='ignore')
        return bool(self._lib.minxg_utf8_is_valid(b, len(b)))

    def utf8_codepoints(self, s: str) -> int:
        """Count Unicode codepoints."""
        if not self._lib: return len(s)
        b = s.encode('utf-8', errors='ignore')
        return int(self._lib.minxg_utf8_codepoint_count(b, len(b)))

    def slugify(self, text: str, max_out: int = 1024) -> str:
        self.__class__.load()
        """Slugify: lowercase, strip non-word, collapse dashes."""
        if not self._lib: return self._py_slugify(text)
        ib = text.encode('utf-8', errors='ignore')
        ob = ctypes.create_string_buffer(max_out)
        n = self._lib.minxg_slugify(ib, len(ib), ob, max_out)
        return ob.value[:n].decode()

    def _py_slugify(self, text: str) -> str:
        import re
        text = text.lower().strip()
        text = re.sub(r'[^\w\s-]', '', text)
        text = re.sub(r'[-\s]+', '-', text)
        return text.strip('-')

    def truncate(self, text: str, max_len: int, suffix: str = "...", max_out: int = 2048) -> str:
        self.__class__.load()
        """Truncate text to max_len visible chars, append suffix if cut."""
        ib = text.encode('utf-8', errors='ignore')
        sb = suffix.encode('utf-8', errors='ignore')
        # Pass max_len + suffix_len so C gives us max_len visible chars
        total = max_len + len(sb)
        ob = ctypes.create_string_buffer(total + 1)
        n = self._lib.minxg_truncate(ib, len(ib), max_len, sb, len(sb), ob, total + 1)
        return ob.value[:n].decode('utf-8', errors='ignore') if n > 0 else text[:max_len]

    def word_freq(self, text: str, top_n: int = 20, max_out: int = 4096) -> str:
        self.__class__.load()
        """Word frequency hash as null-separated "word:N\\0word:N\\0..." sorted by count."""
        if not self._lib: return self._py_wordfreq(text, top_n)
        ib = text.encode('utf-8', errors='ignore')
        ob = ctypes.create_string_buffer(max_out)
        n = self._lib.minxg_word_freq_hash(ib, len(ib), top_n, ob, max_out)
        if n <= 0: return ""
        parts = ob.value.split(b'\x00')
        return ",".join(p.decode('utf-8', errors='ignore') for p in parts[:n] if p)

    def _py_wordfreq(self, text: str, top_n: int) -> str:
        import re
        words = re.findall(r'\b\w+\b', text.lower())
        freq: dict = {}
        for w in words:
            freq[w] = freq.get(w, 0) + 1
        items = sorted(freq.items(), key=lambda x: -x[1])[:top_n]
        return ",".join(f"{k}:{v}" for k, v in items)
